[gd_scene load_steps=3 format=3 uid="uid://dygr048ifg2y4"]

[ext_resource type="Texture2D" uid="uid://deyoqygadp5d6" path="res://TypeBuilding/statue.png" id="1_0tltu"]
[ext_resource type="Script" path="res://Castle/Control/ControlBuilding.gd" id="1_7kly5"]

[node name="Building" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_7kly5")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_0tltu")
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="nazwa" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 28
text = "Ratusz I"

[node name="Opis" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Zbiory dajÄ… dodatkowo +1 do zbioru"
autowrap_mode = 2

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(1, 1, 1, 0)

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/ColorRect"]
layout_mode = 2
offset_top = 4.0
offset_right = 1176.0
offset_bottom = 39.0

[node name="Label4" type="Label" parent="HBoxContainer/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Food:
"

[node name="goldValue" type="Label" parent="HBoxContainer/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "5
"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/ColorRect"]
layout_mode = 2
offset_top = 43.0
offset_right = 1176.0
offset_bottom = 78.0

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer/ColorRect/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Gold: "

[node name="foodValue" type="Label" parent="HBoxContainer/VBoxContainer/ColorRect/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "5
"

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/ColorRect"]
layout_mode = 2
offset_top = 82.0
offset_right = 1176.0
offset_bottom = 117.0

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer/ColorRect/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Time:"

[node name="timeValue" type="Label" parent="HBoxContainer/VBoxContainer/ColorRect/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "2
"

[node name="BuildButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.17
text = "Zbuduj"

[connection signal="pressed" from="HBoxContainer/BuildButton" to="." method="_on_build_button_pressed"]
